overflow for ios fixed

--- a/src/scss/layout/body.scss
+++ b/src/scss/layout/body.scss
@@ -7,7 +7,8 @@ body {
   font-weight: 400;
   overflow-y: scroll;
   overflow-x: hidden;
-  width: 100%;
+  @include buildSize(100%, 100%);
+  position: relative;
 } 
 
 
